--- a/Contact.html
+++ b/Contact.html
@@ -294,7 +294,7 @@ marquee {
     </div>
     <div class="nav-links">
       <ul>
-		<li><a href="about.html">About</a></li>
+		<li><a href="index.html">About</a></li>
         <li><a href="Buy.html">Buy</a></li>
         <li><a href="Contact.html">Contact Us</a></li>
 		<li><a href="Menu.html" id="buy">Buy Now</a></li>
