--- a/index.html
+++ b/index.html
@@ -2,10 +2,6 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name "viewport" content="width=device-width, initial-scale=1.0">
-<meta name="keywords" content="HTML, chicken, food, resturant">
-<meta name="author" content="Hakan">
-<meta name="description" content="Resturant">
   <title>Señor. Pollo</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -88,7 +84,7 @@ iframe{
   z-index: 9;
   transition: all ease 0.5s;
   background-color: #DA7630;
-  height: 60px;
+  height: 45px;
   border-radius: 22.5px;
   border: 0px;
   margin: 5px auto;
@@ -170,7 +166,7 @@ marquee {
 
 .event-box {
   background-color: white;
-  width: 400px;
+  width: 550px;
   height: 400px;
   margin: 50px;
   display: flex;
@@ -181,8 +177,8 @@ marquee {
 
 
 .event-box img {
-  width: 200px;
-  height: 100px;
+  width: 300px;
+  height: 150px;
   object-fit: cover;
 }
 
@@ -201,12 +197,12 @@ marquee {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 600px;
+  height: 400px;
 }
 
 .subscribe img {
   width: 500px;
-  height: 600px;
+  height: 200px;
   margin-bottom: 20px;
 }
 
@@ -223,7 +219,7 @@ marquee {
   z-index: 9;
   transition: all ease 0.5s;
   background-color: #DA7630;
-  height: 100px;
+  height: 45px;
   border-radius: 30px;
   border: 0px;
   margin: 5px auto;
@@ -243,7 +239,7 @@ marquee {
         left: 0;
         transform: scale(1,1);
         background-color: #DA7630;
-        border-radius: 200px;
+        border-radius: 100px;
         opacity: .4;
         z-index: -1;
         transition: all ease 0.5s;
@@ -313,66 +309,17 @@ marquee {
 <div class="events">
   <div class="event-box">
     <a href="about.html"><img src="images/wings.jpg" alt="chicken" height="150" width="200"></a>
-    <p>What would you like to order?</p>
-<form>Name:<br> 
-
-<input type="text"> 
-
-<br><br> 
-
-I would like to order a:<br> 
-
-<input type="checkbox" value="Fried Chicken"> 
-
-$15.00 Fried Chicken <br> 
-
-<input type="checkbox" value="Broiled Chicken Breast Meal"> 
-
-$10.00 Broiled Chicken Breast Meal
-
-<br>
-
-<input type="submit"> 
-
-<br><br> 
-
-</form>
- 
+    <p>Delicous Chicken</p>
+    <p>Our chicken has been in a family recipe for 3 generations. Our chicken has been marinating in  secret sauce which has spices and leaves. </p>
   </div>
   <div class="event-box">
-    <a href="about.html"><img src="images/french fries.jfif" alt="french fries" height="150" width="200"></a>
-    <p>What are your sides?</p>
-<form>Name:
-
-<input type="text"> 
-
-<br><br>
-
-I would like to order a:<br>
-
-<input type="checkbox" value="Mashed Potatoes"> 
-
-$1.50 Mashed Potatoes 
-<br>
-<input type="checkbox" value=" Green Beans"> 
-
-$0.99 Green Beans
-<br>
-
-<input type="checkbox" value="French Fries"> 
-
-$1.00 French Fries 
-<br>
-
-<input type="checkbox" value="Mac n' Cheese">
-
-$1.75 Mac n' Cheese
-<br>
-
-<input type="submit"> 
-</form>
+    <a href="about.html"><img src="images/french fries.jfif" alt="french fries" height="175" width="200"></a>
+    <p>Sides</p>
+    <p>For our sides we have mashed potatoes, green beans, mac and cheese, and our signature french fries.</p>
+	</div>
 </div>
-</div>
-</div>
+
+
+
 </body>
 </html>
