--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@ marquee {
 <body>
   <nav>
    <div class="logo">
-      <img src="grandprixlogo.jpeg" alt="Logo">
+      <a href="index.html"><img src="images/senor.png" alt="Falcon Fitness Center Logo" height="75" width="105"></a> 
     </div>
     <div class="nav-links">
       <ul>
